--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Jasmine Spec Runner v2.3.4</title>
-
+  <script src=https://code.jquery.com/jquery-2.1.4.min.js></script>
   <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.3.4/jasmine_favicon.png">
   <link rel="stylesheet" href="lib/jasmine-2.3.4/jasmine.css">
 
@@ -19,5 +19,8 @@
 </head>
 
 <body>
+
+
+
 </body>
 </html>
