--- a/index.html
+++ b/index.html
@@ -2,41 +2,17 @@
   <html>
     <head>
       <title>Thermostat Challenge</title>
+      <link rel='stylesheet' type='text/css' href='style.css'>
+      <script src='jquery.js'></script>
+      <script type="text/javascript" src="./src/Thermostat.js"></script>
+      <script type="text/javascript" src="app.js"></script>
     </head>
 
-<body>
-  <script src='jquery.js'></script>
-  <script type="text/javascript" src="./src/Thermostat.js"></script>
-  <script type="text/javascript" src="app.js"></script>
+<body onload="t.displayTemp();">
 
-<input type='button' id='btnUp' value='Increase Temperature'/>
-<input type='button' id='btnDown' value='Decrease Temperature'/>
-<input type='button' id='btnReset' value='Reset Temperature'/>
-<div><span>20</span> degrees</div>
-
-<script>
-
-$( "#btnUp" ).click(function() {
- upButton( $( "span:first" ));
-});
-
-$( "#btnDown" ).click(function() {
- downButton( $( "span:first" ) );
-});
-
-$( "#btnReset" ).click(function() {
- resetButton( $( "span:first" ) );
-});
-
-
-function resetButton( j ) {
- var n = parseInt( j.text(20));
-}
-
-
-
-
-</script>
-
+<p id="temp">xxx</p>
+<button onclick="t.upButton();" class="upButton">Increase Temperature</button> <br>
+<button onclick="t.downButton();" class="downButton">Decrease Temperature</button> <br>
+<button onclick="t.resetButton();" class="resetButton">Reset Temperature</button> <br>
 
 </body>
