Trying to change colours based on changeColor function. Currently not working

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
       <script type="text/javascript" src="app.js"></script>
     </head>
 
-<body onload="t.displayTemp();">
 
-<p id="temp">xxx</p>
+<p id="temp">20</p>
 
 <input type="button" id="upButton" class="upButton" value="Increase Temperature"/><br>
 <input type="button" id="downButton" class="downButton" value="Decrease Temperature"/><br>
