Add name of city at top of index page

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
       <link rel='stylesheet' type='text/css' href='style.css'>
     </head>
 <body>
-
-<h2 id="weather"></h2>
+<h1 id="city"></h1>  
+<h2 id="weather_temp"></h2>
+<h2 id="weather_humid"></h2>
 
 <form id='weather_city'>
 <input type="text" name="city" id="city_weather" placeholder='Change City'/></br>
