--- a/index.html
+++ b/index.html
@@ -1,28 +1,43 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <title>Thermostat Challenge</title>
-      <link rel='stylesheet' type='text/css' href='style.css'>
-    </head>
+<html>
+
+<head>
+  <title>Thermostat Challenge</title>
+  <link rel='stylesheet' type='text/css' href='style.css'>
+</head>
+
 <body>
-<h1 id="city"></h1>
-<h2 id="weather_temp"></h2>
-<h2 id="weather_humid"></h2>
+  <h1 id="city"></h1>
+  <h2 id="weather_temp"></h2>
+  <h2 id="weather_humid"></h2>
 
-<form id='weather_city'>
-<input type="text" name="city" id="city_weather" placeholder='Change City'/></br>
-<input type="submit" name="Submit city" value="Submit City"/>
-</form>
+  <form id='weather_city'>
+    <input type="text" name="city" id="city_weather" placeholder='Change City' />
+    </br>
+    <input type="submit" name="Submit city" value="Submit City" />
+  </form>
 
-<h2 id = "degrees"><span id="temp">20</span>&deg;C</h2>
+  <h2 id="degrees">
+    <span id="temp">20</span>&deg;C</h2>
+  <div id='map'></div>
 
-<input type="button" id="upButton" class="upButton" value="Increase Temperature"/><br>
-<input type="button" id="downButton" class="downButton" value="Decrease Temperature"/><br>
-<input type="button" id="resetButton" class="resetButton" value="Reset Temperature"/><br><br>
-<p id='ps'>Power Save<p>
-<input type="radio"  name="powerSave" id="powerSaveOn" value="ON" checked="checked">ON<br><br>
-<input type="radio" name="powerSave" id="powerSaveOff" value="OFF">OFF<br>
-<script src='jquery.js'></script>
-<script type="text/javascript" src="./src/Thermostat.js"></script>
-<script type="text/javascript" src="app.js"></script>
+  <input type="button" id="upButton" class="upButton" value="Increase Temperature" />
+  <br>
+  <input type="button" id="downButton" class="downButton" value="Decrease Temperature" />
+  <br>
+  <input type="button" id="resetButton" class="resetButton" value="Reset Temperature" />
+  <br>
+  <br>
+  <p id='ps'>Power Save
+    <p>
+      <input type="radio" name="powerSave" id="powerSaveOn" value="ON" checked="checked">ON
+      <br>
+      <br>
+      <input type="radio" name="powerSave" id="powerSaveOff" value="OFF">OFF
+      <br>
+      <script src='jquery.js'></script>
+      <script type="text/javascript" src="./src/Thermostat.js"></script>
+      <script type="text/javascript" src="app.js"></script>
+      <script src="https://maps.googleapis.com/maps/api/js"></script>
+      <script type="text/javascript" src="./src/Maps.js"></script>
 </body>
