--- a/index.html
+++ b/index.html
@@ -13,18 +13,12 @@
   <h2 id="weather_temp"></h2>
   <h2 id="weather_humid"></h2>
 
-  <form id='weather_city'>
-    <input type="text" name="city" id="city_weather" placeholder='Change City' />
-    </br>
-    <input type="submit" name="Submit city" value="Submit City" />
-  </form>
-
   <h2 id="degrees">
     <span id="temp">20</span>&deg;C</h2>
-  <div id="floating-panel">
+  <form id="floating-panel">
     <input id="address" type="textbox" placeholder="e.g London">
-    <input id="submit" type="button" value="Geocode">
-  </div>
+    <input id="submit" type="submit" value="Find City on Map">
+  </form>
   <div id='map'></div>
 
   <input type="button" id="upButton" class="upButton" value="Increase Temperature" />
@@ -44,6 +38,6 @@
       <script src='jquery.js'></script>
       <script type="text/javascript" src="./src/Thermostat.js"></script>
       <script type="text/javascript" src="app.js"></script>
-      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDgGK_dIvvB5lqLx5GVEtRS16FBIK8MXI&signed_in=true&callback=initMap"async defer></script>
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDgGK_dIvvB5lqLx5GVEtRS16FBIK8MXI&signed_in=true&callback=initMap" async defer></script>
       <script type="text/javascript" src="./src/Maps.js"></script>
 </body>
